# intro-graphics

./: README.md
differencer/: CMakeCache.txt  Makefile  cmake_install.cmake  differencer  differencer.cxx
presentation/: notes.txt
presentation/maya/: cat_wall.ma
presentation/videos/: wolf.mov
project1/project1A/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1A  project1A.cxx
project1/project1B/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1B  project1B.cxx  project1B_old.cxx
project1/project1C/: CMakeCache.txt  Makefile  cmake_install.cmake  project1C  project1C.cxx
project1/project1D/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake  project1D  project1D.cxx
project1/project1E/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1E  project1E.cxx
project1/project1F/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1F  project1F.cxx
wolf/wolf_maya/assets/: wolf_Body.ma  wolf_Body_some_fur.ma  wolf_Body_some_fur.mb  wolf_Body_some_fur__wolf.xgen
wolf/wolf_maya/scenes/: toes.ma  wolf.ma  wolf_base.ma  wolf_cleanup.ma  wolf_cleanup_1.ma  wolf_cleanup_2.ma  wolf_rig.ma  wolf_rig_final.ma
wolf/wolf_maya/scenes/.mayaSwatches/: wolf_rig.ma.swatches
wolf/wolf_maya/sourceimages/.mayaSwatches/: wolf-image.jpg_hcm.swatch
wolf/wolf_maya/tmp/: wolf_cleanup_2.iff
wolf/wolf_maya/xgen/collections/wolfFur/tailFur/groom/bend/: body.ptx
wolf/wolf_maya/xgen/collections/wolfFur/tailFur/groom/length/: body.ptx
(+4 files in other folders)
